--- a/classic1.html
+++ b/classic1.html
@@ -7,13 +7,16 @@
       xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
       xmlns:cc="http://github.com/egonw/cheminformatics.classics/1/#"
       xmlns:foaf="http://xmlns.com/foaf/0.1/"
+      xmlns:cito="http://purl.org/net/cito/"
     version="XHTML+RDFa 1.0" xml:lang="en">
   <head>
     <title>Cheminformatics Classic #1: H. Wiener, Structural Determination of Paraffin Boiling Points, 1947</title>
   </head>
   <body>
 
-  <h1>Classic 1</h1>
+  <h1>Cheminformatics Classic #1</h1>
+  <div about=""><span rel="cito:citesAsSourceDocument" resource="#classic1"/></div>
+
   <div about="#classic1">
     <span property="dc:creator">H. Wiener</span>,
     <span property="dc:title">Structural Determination of Paraffin Boiling Points</span>,
@@ -92,6 +95,97 @@
     boiling point</span>.
   </p>
 
+  <h2>Table II (Derived)</h2>
+  <table>
+    <tr>
+      <td>Cpd.</td>
+      <td>t<sub>0</sub></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C4H10/c1-3-4-2/h3-4H2,1-2H3">
+      <td><span property="dc:title">n-Butane</span></td>
+      <td><span property="cc:t0">-0.5</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C4H10/c1-4(2)3/h4H,1-3H3">
+      <td><span property="dc:title">2-Methylpropane</span></td>
+      <td><span property="cc:t0">10.7</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-3-5-4-2/h3-5H2,1-2H3">
+      <td><span property="dc:title">n-Pentane</span></td>
+      <td><span property="cc:t0">36.1</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-4-5(2)3/h5H,4H2,1-3H3">
+      <td><span property="dc:title">2-Methylbutane</span></td>
+      <td><span property="cc:t0">44.3</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-5(2,3)4/h1-4H3">
+      <td><span property="dc:title">2,2-Dimethylpropane</span></td>
+      <td><span property="cc:t0">62.7</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-3-5-6-4-2/h3-6H2,1-2H3">
+      <td><span property="dc:title">n-Hexane</span></td>
+      <td><span property="cc:t0">68.7</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-4-5-6(2)3/h6H,4-5H2,1-3H3">
+      <td><span property="dc:title">2-Methylpentane</span></td>
+      <td><span property="cc:t0">77.2</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-4-6(3)5-2/h6H,4-5H2,1-3H3">
+      <td><span property="dc:title">3-Methylpentane</span></td>
+      <td><span property="cc:t0">74.1</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-5-6(2,3)4/h5H2,1-4H3">
+      <td><span property="dc:title">2,2-Dimethylbutane</span></td>
+      <td><span property="cc:t0">87.7</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-5(2)6(3)4/h5-6H,1-4H3">
+      <td><span property="dc:title">2,3-Dimethylbutane</span></td>
+      <td><span property="cc:t0">79.5</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-3-5-7-6-4-2/h3-7H2,1-2H3">
+      <td><span property="dc:title">n-Heptane</span></td>
+      <td><span property="cc:t0">98.4</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-4-5-6-7(2)3/h7H,4-6H2,1-3H3">
+      <td><span property="dc:title">2-Methylhexane</span></td>
+      <td><span property="cc:t0">106.8</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-4-6-7(3)5-2/h7H,4-6H2,1-3H3">
+      <td><span property="dc:title">3-Methylhexane</span></td>
+      <td><span property="cc:t0">104.9</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-4-7(5-2)6-3/h7H,4-6H2,1-3H3">
+      <td><span property="dc:title">3-Ethylpentane</span></td>
+      <td><span property="cc:t0">103.4</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-5-6-7(2,3)4/h5-6H2,1-4H3">
+      <td><span property="dc:title">2,2-Dimethylpentane</span></td>
+      <td><span property="cc:t0">117.6</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-5-7(4)6(2)3/h6-7H,5H2,1-4H3">
+      <td><span property="dc:title">2,3-Dimethylpentane</span></td>
+      <td><span property="cc:t0">107.1</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-6(2)5-7(3)4/h6-7H,5H2,1-4H3">
+      <td><span property="dc:title">2,4-Dimethylpentane</span></td>
+      <td><span property="cc:t0">116.3</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-5-7(3,4)6-2/h5-6H2,1-4H3">
+      <td><span property="dc:title">3,3-Dimethylpentane</span></td>
+      <td><span property="cc:t0">110.8</span></td>
+    </tr>
+    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-6(2)7(3,4)5/h6H,1-5H3">
+      <td><span property="dc:title">2,2,3-Trimethylbutane</span></td>
+      <td><span property="cc:t0">115.9</span></td>
+    </tr>
+  </table>
+
+  <!-- meta data -->
+  <hr />
+  <div about="">
+    All data on this page is available under
+    <a rel="dc:license" href="http://creativecommons.org/choose/zero/">CC0</a>.
+    Contributors: <span property="dc:creator">Egon Willighagen</span>.
+  </div>
 
   </body>
 </html>
