--- a/classic1.html
+++ b/classic1.html
@@ -8,6 +8,10 @@
       xmlns:cc="http://github.com/egonw/cheminformatics.classics/1/#"
       xmlns:foaf="http://xmlns.com/foaf/0.1/"
       xmlns:cito="http://purl.org/net/cito/"
+      xmlns:cinf="http://semanticscience.org/ontology/cheminf-core.owl#"
+      xmlns:owl="http://www.w3.org/2002/07/owl#"
+      xmlns:chebi="http://purl.obolibrary.org/obo/CHEBI#"
+      xmlns:chem="http://www.blueobelisk.org/chemistryblogs/"
     version="XHTML+RDFa 1.0" xml:lang="en">
   <head>
     <title>Cheminformatics Classic #1: H. Wiener, Structural Determination of Paraffin Boiling Points, 1947</title>
@@ -16,6 +20,8 @@
 
   <h1>Cheminformatics Classic #1</h1>
   <div about=""><span rel="cito:citesAsSourceDocument" resource="#classic1"/></div>
+  <div about="cc:molecule"><span rel="owl:sameAs" resource="chebi:CHEBI_36357"/></div>
+  <div about="chem:smiles"><span rel="owl:sameAs" resource="cinf:CHEMINF_000032"/></div>
 
   <div about="#classic1">
     <span property="dc:creator">H. Wiener</span>,
@@ -34,60 +40,70 @@
       <td>t<sub>0</sub></td>
       <td>w<sub>0</sub></td>
       <td>p<sub>0</sub></td>
+      <td>SMILES</td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C4H10/c1-3-4-2/h3-4H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C4H10/c1-3-4-2/h3-4H2,1-2H3">
       <td><span property="dc:title">n-Butane</span></td>
       <td><span property="cc:t0">-0.5</span></td>
       <td><span property="cc:w0">10</span></td>
       <td><span property="cc:p0">1</span></td>
+      <td><span property="chem:smiles">CCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-3-5-4-2/h3-5H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-3-5-4-2/h3-5H2,1-2H3">
       <td><span property="dc:title">n-Pentane</span></td>
       <td><span property="cc:t0">36.1</span></td>
       <td><span property="cc:w0">20</span></td>
       <td><span property="cc:p0">2</span></td>
+      <td><span property="chem:smiles">CCCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-3-5-6-4-2/h3-6H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-3-5-6-4-2/h3-6H2,1-2H3">
       <td><span property="dc:title">n-Hexane</span></td>
       <td><span property="cc:t0">68.7</span></td>
       <td><span property="cc:w0">35</span></td>
       <td><span property="cc:p0">3</span></td>
+      <td><span property="chem:smiles">CCCCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-3-5-7-6-4-2/h3-7H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-3-5-7-6-4-2/h3-7H2,1-2H3">
       <td><span property="dc:title">n-Heptane</span></td>
       <td><span property="cc:t0">98.4</span></td>
       <td><span property="cc:w0">56</span></td>
       <td><span property="cc:p0">4</span></td>
+      <td><span property="chem:smiles">CCCCCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C8H18/c1-3-5-7-8-6-4-2/h3-8H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C8H18/c1-3-5-7-8-6-4-2/h3-8H2,1-2H3">
       <td><span property="dc:title">n-Octane</span></td>
       <td><span property="cc:t0">125.7</span></td>
       <td><span property="cc:w0">84</span></td>
       <td><span property="cc:p0">5</span></td>
+      <td><span property="chem:smiles">CCCCCCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C9H20/c1-3-5-7-9-8-6-4-2/h3-9H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C9H20/c1-3-5-7-9-8-6-4-2/h3-9H2,1-2H3">
       <td><span property="dc:title">n-Nonane</span></td>
       <td><span property="cc:t0">150.8</span></td>
       <td><span property="cc:w0">120</span></td>
       <td><span property="cc:p0">6</span></td>
+      <td><span property="chem:smiles">CCCCCCCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C10H22/c1-3-5-7-9-10-8-6-4-2/h3-10H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C10H22/c1-3-5-7-9-10-8-6-4-2/h3-10H2,1-2H3">
       <td><span property="dc:title">n-Decane</span></td>
       <td><span property="cc:t0">174.0</span></td>
       <td><span property="cc:w0">165</span></td>
       <td><span property="cc:p0">7</span></td>
+      <td><span property="chem:smiles">CCCCCCCCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C11H24/c1-3-5-7-9-11-10-8-6-4-2/h3-11H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C11H24/c1-3-5-7-9-11-10-8-6-4-2/h3-11H2,1-2H3">
       <td><span property="dc:title">n-Undecane</span></td>
       <td><span property="cc:t0">195.8</span></td>
       <td><span property="cc:w0">220</span></td>
       <td><span property="cc:p0">8</span></td>
+      <td><span property="chem:smiles">CCCCCCCCCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C12H26/c1-3-5-7-9-11-12-10-8-6-4-2/h3-12H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C12H26/c1-3-5-7-9-11-12-10-8-6-4-2/h3-12H2,1-2H3">
       <td><span property="dc:title">n-Dodecane</span></td>
       <td><span property="cc:t0">216.2</span></td>
       <td><span property="cc:w0">286</span></td>
       <td><span property="cc:p0">9</span></td>
+      <td><span property="chem:smiles">CCCCCCCCCCCC</span></td>
     </tr>
   </table>
   <p>
@@ -100,82 +116,102 @@
     <tr>
       <td>Cpd.</td>
       <td>t<sub>0</sub></td>
+      <td>SMILES</td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C4H10/c1-3-4-2/h3-4H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C4H10/c1-3-4-2/h3-4H2,1-2H3">
       <td><span property="dc:title">n-Butane</span></td>
       <td><span property="cc:t0">-0.5</span></td>
+      <td><span property="chem:smiles">CCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C4H10/c1-4(2)3/h4H,1-3H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C4H10/c1-4(2)3/h4H,1-3H3">
       <td><span property="dc:title">2-Methylpropane</span></td>
       <td><span property="cc:t0">10.7</span></td>
+      <td><span property="chem:smiles">CC(C)C</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-3-5-4-2/h3-5H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-3-5-4-2/h3-5H2,1-2H3">
       <td><span property="dc:title">n-Pentane</span></td>
       <td><span property="cc:t0">36.1</span></td>
+      <td><span property="chem:smiles">CCCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-4-5(2)3/h5H,4H2,1-3H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-4-5(2)3/h5H,4H2,1-3H3">
       <td><span property="dc:title">2-Methylbutane</span></td>
       <td><span property="cc:t0">44.3</span></td>
+      <td><span property="chem:smiles">CC(C)CC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-5(2,3)4/h1-4H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C5H12/c1-5(2,3)4/h1-4H3">
       <td><span property="dc:title">2,2-Dimethylpropane</span></td>
       <td><span property="cc:t0">62.7</span></td>
+      <td><span property="chem:smiles">CC(C)(C)C</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-3-5-6-4-2/h3-6H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-3-5-6-4-2/h3-6H2,1-2H3">
       <td><span property="dc:title">n-Hexane</span></td>
       <td><span property="cc:t0">68.7</span></td>
+      <td><span property="chem:smiles">CCCCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-4-5-6(2)3/h6H,4-5H2,1-3H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-4-5-6(2)3/h6H,4-5H2,1-3H3">
       <td><span property="dc:title">2-Methylpentane</span></td>
       <td><span property="cc:t0">77.2</span></td>
+      <td><span property="chem:smiles">CC(C)CCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-4-6(3)5-2/h6H,4-5H2,1-3H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-4-6(3)5-2/h6H,4-5H2,1-3H3">
       <td><span property="dc:title">3-Methylpentane</span></td>
       <td><span property="cc:t0">74.1</span></td>
+      <td><span property="chem:smiles">CCC(C)CC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-5-6(2,3)4/h5H2,1-4H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-5-6(2,3)4/h5H2,1-4H3">
       <td><span property="dc:title">2,2-Dimethylbutane</span></td>
       <td><span property="cc:t0">87.7</span></td>
+      <td><span property="chem:smiles">CC(C)(C)CC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-5(2)6(3)4/h5-6H,1-4H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C6H14/c1-5(2)6(3)4/h5-6H,1-4H3">
       <td><span property="dc:title">2,3-Dimethylbutane</span></td>
       <td><span property="cc:t0">79.5</span></td>
+      <td><span property="chem:smiles">CC(C)C(C)C</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-3-5-7-6-4-2/h3-7H2,1-2H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-3-5-7-6-4-2/h3-7H2,1-2H3">
       <td><span property="dc:title">n-Heptane</span></td>
       <td><span property="cc:t0">98.4</span></td>
+      <td><span property="chem:smiles">CCCCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-4-5-6-7(2)3/h7H,4-6H2,1-3H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-4-5-6-7(2)3/h7H,4-6H2,1-3H3">
       <td><span property="dc:title">2-Methylhexane</span></td>
       <td><span property="cc:t0">106.8</span></td>
+      <td><span property="chem:smiles">CC(C)CCCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-4-6-7(3)5-2/h7H,4-6H2,1-3H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-4-6-7(3)5-2/h7H,4-6H2,1-3H3">
       <td><span property="dc:title">3-Methylhexane</span></td>
       <td><span property="cc:t0">104.9</span></td>
+      <td><span property="chem:smiles">CCC(C)CCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-4-7(5-2)6-3/h7H,4-6H2,1-3H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-4-7(5-2)6-3/h7H,4-6H2,1-3H3">
       <td><span property="dc:title">3-Ethylpentane</span></td>
       <td><span property="cc:t0">103.4</span></td>
+      <td><span property="chem:smiles">CCC(CC)CC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-5-6-7(2,3)4/h5-6H2,1-4H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-5-6-7(2,3)4/h5-6H2,1-4H3">
       <td><span property="dc:title">2,2-Dimethylpentane</span></td>
       <td><span property="cc:t0">117.6</span></td>
+      <td><span property="chem:smiles">CC(C)(C)CCC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-5-7(4)6(2)3/h6-7H,5H2,1-4H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-5-7(4)6(2)3/h6-7H,5H2,1-4H3">
       <td><span property="dc:title">2,3-Dimethylpentane</span></td>
       <td><span property="cc:t0">107.1</span></td>
+      <td><span property="chem:smiles">CC(C)C(C)CC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-6(2)5-7(3)4/h6-7H,5H2,1-4H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-6(2)5-7(3)4/h6-7H,5H2,1-4H3">
       <td><span property="dc:title">2,4-Dimethylpentane</span></td>
       <td><span property="cc:t0">116.3</span></td>
+      <td><span property="chem:smiles">CC(C)CC(C)C</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-5-7(3,4)6-2/h5-6H2,1-4H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-5-7(3,4)6-2/h5-6H2,1-4H3">
       <td><span property="dc:title">3,3-Dimethylpentane</span></td>
       <td><span property="cc:t0">110.8</span></td>
+      <td><span property="chem:smiles">CCC(C)(C)CC</span></td>
     </tr>
-    <tr about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-6(2)7(3,4)5/h6H,1-5H3">
+    <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-6(2)7(3,4)5/h6H,1-5H3">
       <td><span property="dc:title">2,2,3-Trimethylbutane</span></td>
       <td><span property="cc:t0">115.9</span></td>
+      <td><span property="chem:smiles">CC(C)(C)C(C)C</span></td>
     </tr>
   </table>
 
@@ -186,6 +222,14 @@
     <a rel="dc:license" href="http://creativecommons.org/choose/zero/">CC0</a>.
     Contributors: <span property="dc:creator">Egon Willighagen</span>.
   </div>
+  <p about=""
+     resource="http://www.w3.org/TR/rdfa-syntax"
+     rel="dc:conformsTo" xmlns:dc="http://purl.org/dc/terms/">
+    <a href="http://validator.w3.org/check?uri=referer"><img
+        src="http://www.w3.org/Icons/valid-xhtml-rdfa"
+        alt="Valid XHTML + RDFa" height="31" width="88" /></a>
+  </p>
+
 
   </body>
 </html>
