The data is CC0, but the XHTML+RDFa is CC-SA-BY

--- a/classic1.html
+++ b/classic1.html
@@ -12,6 +12,7 @@
       xmlns:owl="http://www.w3.org/2002/07/owl#"
       xmlns:chebi="http://purl.obolibrary.org/obo/CHEBI#"
       xmlns:chem="http://www.blueobelisk.org/chemistryblogs/"
+      xmlns:xs="http://www.w3.org/2001/XMLSchema#"
     version="XHTML+RDFa 1.0" xml:lang="en">
   <head>
     <title>Cheminformatics Classic #1: H. Wiener, Structural Determination of Paraffin Boiling Points, 1947</title>
@@ -219,8 +220,14 @@
   <hr />
   <div about="">
     All data on this page is available under
-    <a rel="dc:license" href="http://creativecommons.org/choose/zero/">CC0</a>.
+    <a href="http://creativecommons.org/choose/zero/">CC0</a>,
+    but the document itself is available under
+    <a rel="dc:license" href="http://creativecommons.org/licenses/by-sa/2.0/">CC-SA-BY</a>.
     Contributors: <span property="dc:creator">Egon Willighagen</span>.
+  </div>
+  <div>
+    Users of this data are kindly asked to cite this project:
+    E.L. Willighagen, Cheminformatics Classics, 2010. Available from http://github.com/egonw/cheminformatics.classics/.
   </div>
   <p about=""
      resource="http://www.w3.org/TR/rdfa-syntax"
