Made project page clickable

--- a/classic1.html
+++ b/classic1.html
@@ -227,7 +227,8 @@
   </div>
   <div>
     Users of this data are kindly asked to cite this project:
-    E.L. Willighagen, Cheminformatics Classics, 2010. Available from http://github.com/egonw/cheminformatics.classics/.
+    E.L. Willighagen, Cheminformatics Classics, 2010. Available from
+    <a href="http://github.com/egonw/cheminformatics.classics/">http://github.com/egonw/cheminformatics.classics/</a>.
   </div>
   <p about=""
      resource="http://www.w3.org/TR/rdfa-syntax"
