Added solvent roles

--- a/classic2.html
+++ b/classic2.html
@@ -10,6 +10,7 @@
       xmlns:cito="http://purl.org/net/cito/"
       xmlns:cinf="http://semanticscience.org/ontology/cheminf-core.owl#"
       xmlns:owl="http://www.w3.org/2002/07/owl#"
+      xmlns:obo="http://purl.obolibrary.org/obo#"
       xmlns:chebi="http://purl.obolibrary.org/obo/CHEBI#"
       xmlns:chem="http://www.blueobelisk.org/chemistryblogs/"
       xmlns:xs="http://www.w3.org/2001/XMLSchema#"
@@ -40,12 +41,12 @@
       <td></td>
       <td>proton</td>
       <td>mult</td>
-      <td about="#cdcl3" typeof="cc:molecule">CDCl<sub>3</sub></td>
-      <td about="#dacetone" typeof="cc:molecule">(CD<sub>3</sub>)<sub>2</sub>CO</td>
-      <td about="#ddmso" typeof="cc:molecule">(CD<sub>3</sub>)<sub>2</sub>SO</td>
-      <td about="#dbenzene" typeof="cc:molecule">C<sub>6</sub>D<sub>6</sub></td>
-      <td about="#dmcn" typeof="cc:molecule">CD<sub>3</sub>CN</td>
-      <td about="#dmethanol" typeof="cc:molecule">CD<sub>3</sub>OD</td>
+      <td about="#cdcl3" typeof="cc:molecule">CDCl<sub>3</sub><span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></span></td>
+      <td about="#dacetone" typeof="cc:molecule">(CD<sub>3</sub>)<sub>2</sub>CO<span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></td>
+      <td about="#ddmso" typeof="cc:molecule">(CD<sub>3</sub>)<sub>2</sub>SO<span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></td>
+      <td about="#dbenzene" typeof="cc:molecule">C<sub>6</sub>D<sub>6</sub><span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></td>
+      <td about="#dmcn" typeof="cc:molecule">CD<sub>3</sub>CN<span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></td>
+      <td about="#dmethanol" typeof="cc:molecule">CD<sub>3</sub>OD<span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></td>
       <td about="#dwater" typeof="cc:molecule">D<sub>2</sub>O</td>
     </tr>
     <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C3H6O/c1-3(2)4/h1-2H3">
