--- a/classic1.html
+++ b/classic1.html
@@ -21,8 +21,8 @@
 
   <h1>Cheminformatics Classic #1</h1>
   <div about=""><span rel="cito:citesAsSourceDocument" resource="#classic1"/></div>
-  <div about="cc:molecule"><span rel="owl:sameAs" resource="chebi:CHEBI_36357"/></div>
-  <div about="chem:smiles"><span rel="owl:sameAs" resource="cinf:CHEMINF_000032"/></div>
+  <div about="[cc:molecule]"><span rel="owl:sameAs" resource="[chebi:CHEBI_36357]"/></div>
+  <div about="[chem:smiles]"><span rel="owl:sameAs" resource="[cinf:CHEMINF_000032]"/></div>
 
   <div about="#classic1">
     <span property="dc:creator">H. Wiener</span>,
