--- a/classic2.html
+++ b/classic2.html
@@ -22,8 +22,8 @@
 
   <h1>Cheminformatics Classic #2</h1>
   <div about=""><span rel="cito:citesAsSourceDocument" resource="#classic2"/></div>
-  <div about="cc:molecule"><span rel="owl:sameAs" resource="chebi:CHEBI_36357"/></div>
-  <div about="chem:smiles"><span rel="owl:sameAs" resource="cinf:CHEMINF_000032"/></div>
+  <div about="[cc:molecule]"><span rel="owl:sameAs" resource="[chebi:CHEBI_36357]"/></div>
+  <div about="[chem:smiles]"><span rel="owl:sameAs" resource="[cinf:CHEMINF_000032]"/></div>
 
   <div about="#classic2">
     <span property="dc:creator">H.E. Gottlieb, V. Kotlyar, A. Nudelman</span>,
@@ -41,13 +41,13 @@
       <td></td>
       <td>proton</td>
       <td>mult</td>
-      <td about="#cdcl3" typeof="cc:molecule">CDCl<sub>3</sub><span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></span></td>
-      <td about="#dacetone" typeof="cc:molecule">(CD<sub>3</sub>)<sub>2</sub>CO<span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></td>
-      <td about="#ddmso" typeof="cc:molecule">(CD<sub>3</sub>)<sub>2</sub>SO<span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></td>
-      <td about="#dbenzene" typeof="cc:molecule">C<sub>6</sub>D<sub>6</sub><span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></td>
-      <td about="#dmcn" typeof="cc:molecule">CD<sub>3</sub>CN<span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></td>
-      <td about="#dmethanol" typeof="cc:molecule">CD<sub>3</sub>OD<span rel="obo:hasRole"><span about="chebi:CHEBI_46787"/></td>
-      <td about="#dwater" typeof="cc:molecule">D<sub>2</sub>O</td>
+      <td about="#cdcl3" typeof="cc:molecule">CDCl<sub>3</sub><span rel="obo:hasRole"><span about="[chebi:CHEBI_46787]"/></span></td>
+      <td about="#dacetone" typeof="cc:molecule">(CD<sub>3</sub>)<sub>2</sub>CO<span rel="obo:hasRole"><span about="[chebi:CHEBI_46787]"/></td>
+      <td about="#ddmso" typeof="cc:molecule">(CD<sub>3</sub>)<sub>2</sub>SO<span rel="obo:hasRole"><span about="[chebi:CHEBI_46787]"/></td>
+      <td about="#dbenzene" typeof="cc:molecule">C<sub>6</sub>D<sub>6</sub><span rel="obo:hasRole"><span about="[chebi:CHEBI_46787]"/></td>
+      <td about="#dmcn" typeof="cc:molecule">CD<sub>3</sub>CN<span rel="obo:hasRole"><span about="[chebi:CHEBI_46787]"/></td>
+      <td about="#dmethanol" typeof="cc:molecule">CD<sub>3</sub>OD<span rel="obo:hasRole"><span about="[chebi:CHEBI_46787]"/></td>
+      <td about="#dwater" typeof="cc:molecule">D<sub>2</sub>O<span rel="obo:hasRole"><span about="[chebi:CHEBI_46787]"/></td>
     </tr>
     <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C3H6O/c1-3(2)4/h1-2H3">
       <td><span property="dc:title">acetone</span></td>
