--- a/classic1.html
+++ b/classic1.html
@@ -172,7 +172,7 @@
     <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-3-5-7-6-4-2/h3-7H2,1-2H3">
       <td><span property="dc:title">n-Heptane</span></td>
       <td><span property="cc:t0" datatype="xs:float">98.4</span></td>
-      <td><span property="chem:smiles">CCCCCC</span></td>
+      <td><span property="chem:smiles">CCCCCCC</span></td>
     </tr>
     <tr typeof="cc:molecule" about="http://rdf.openmolecules.net/?InChI=1/C7H16/c1-4-5-6-7(2)3/h7H,4-6H2,1-3H3">
       <td><span property="dc:title">2-Methylhexane</span></td>
