First few rows of Table III

--- a/classic1.html
+++ b/classic1.html
@@ -216,6 +216,50 @@
     </tr>
   </table>
 
+  <h2>Table III: Nonanes and Decanes</h2>
+  <table>
+    <tr>
+      <td>Cpd.</td>
+      <td>t<sub>obs.</sub></td>
+      <td>SMILES</td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:BKIMMITUMNQMOS-UHFFFAOYSA-N">
+      <td><span property="dc:title">n-Nonane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">150.8</span></td>
+      <td><span property="chem:smiles">CCCCCCCCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:ZUBZATZOEPUUQF-UHFFFAOYSA-N">
+      <td><span property="dc:title">2-Methyloctane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">143.3</span></td>
+      <td><span property="chem:smiles">CC(C)CCCCCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:SEEOMASXHIJCDV-UHFFFAOYSA-N">
+      <td><span property="dc:title">3-Methyloctane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">144.2</span></td>
+      <td><span property="chem:smiles">CC(CC)CCCCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:DOGIHOCMZJUJNR-UHFFFAOYSA-N">
+      <td><span property="dc:title">4-Methyloctane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">142.5</span></td>
+      <td><span property="chem:smiles">CC(CCC)CCCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:PSVQKOKKLWHNRP-UHFFFAOYSA-N">
+      <td><span property="dc:title">3-Ethylheptane </span></td>
+      <td><span property="cc:tobs" datatype="xs:float">143.0</span></td>
+      <td><span property="chem:smiles">C(C)C(CC)CCCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:XMROPFQWHHUFFS-UHFFFAOYSA-N">
+      <td><span property="dc:title">4-Ethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">141.2</span></td>
+      <td><span property="chem:smiles">C(C)C(CCC)CCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:PSABUFWDVWCFDP-UHFFFAOYSA-N">
+      <td><span property="dc:title">&&Dimethylheptane </span></td>
+      <td><span property="cc:tobs" datatype="xs:float">130.5</span></td>
+      <td><span property="chem:smiles">CC(C)(CCCCC)C</span></td>
+    </tr>
+  </table>
+      
   <!-- meta data -->
   <hr />
   <div about="">
