A few more from Table III

--- a/classic1.html
+++ b/classic1.html
@@ -254,9 +254,44 @@
       <td><span property="chem:smiles">C(C)C(CCC)CCC</span></td>
     </tr>
     <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:PSABUFWDVWCFDP-UHFFFAOYSA-N">
-      <td><span property="dc:title">&&Dimethylheptane </span></td>
+      <td><span property="dc:title">2,2-Dimethylheptane </span></td>
       <td><span property="cc:tobs" datatype="xs:float">130.5</span></td>
       <td><span property="chem:smiles">CC(C)(CCCCC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:WBRFDUJXCLCKPX-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,3-Dimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">140.5</span></td>
+      <td><span property="chem:smiles">CC(C)C(CCCC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:AUKVIBNBLXQNIZ-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,4-Dimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">133</span></td>
+      <td><span property="chem:smiles">CC(C)CC(CCC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:HQZHQNKZOYIKQC-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,5-Dimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">136</span></td>
+      <td><span property="chem:smiles">CC(C)CCC(CC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:KBPCCVWUMVGXGF-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,6-Dimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">135.2</span></td>
+      <td><span property="chem:smiles">CC(C)CCCC(C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:BVAKDOXCVSMKHE-UHFFFAOYSA-N">
+      <td><span property="dc:title">3,3-Dimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">137.3</span></td>
+      <td><span property="chem:smiles">CC(CC)(CCCC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:MAKRYGRRIKSDES-UHFFFAOYSA-N">
+      <td><span property="dc:title">3,4-Dimethylheptane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">140.5</span></td>
+      <td><span property="chem:smiles">CC(CC)C(CCC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:MVLOWDRGPHBNNF-UHFFFAOYSA-N">
+      <td><span property="dc:title">2-Methyl-3-ethylhexane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">139</span></td>
+      <td><span property="chem:smiles">CC(C)C(CCC)CC</span></td>
     </tr>
   </table>
       
