A bunch more lines

--- a/classic1.html
+++ b/classic1.html
@@ -293,6 +293,56 @@
       <td><span property="cc:tobs" datatype="xs:float">139</span></td>
       <td><span property="chem:smiles">CC(C)C(CCC)CC</span></td>
     </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:CBVFSZDQEHBJEQ-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,3-Trimethylhexane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">133.4</span></td>
+      <td><span property="chem:smiles">CC(C)(C(CCC)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:AFTPEBDOGXRMNQ-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,4-Trimethylhexane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">126.5</span></td>
+      <td><span property="chem:smiles">CC(C)(CC(CC)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:HHOSMYBYIHNXNO-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,5-Trimethylhexane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">124.1</span></td>
+      <td><span property="chem:smiles">CC(C)(CCC(C)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:DJYSEQMMCZAKGT-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,3,3-Trimethylhexane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">138</span></td>
+      <td><span property="chem:smiles">CC(C)C(CCC)(C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:ODGLTLJZCVNPBU-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,3,5-Trimethylhexane </span></td>
+      <td><span property="cc:tobs" datatype="xs:float">131.4</span></td>
+      <td><span property="chem:smiles">CC(C)C(CC(C)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:SVEMKBCPZYWEPH-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,4,4-Trimethylhexane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">131</span></td>
+      <td><span property="chem:smiles">CC(C)CC(CC)(C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:ARWOOWBJJKVYOV-UHFFFAOYSA-N">
+      <td><span property="dc:title">3,3,4-Trimethylhexane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">139</span></td>
+      <td><span property="chem:smiles">CC(CC)(C(CC)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:BGXXXYLRPIRDHJ-UHFFFAOYSA-N">
+      <td><span property="dc:title">3,3-Diethylpentane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">146.5</span></td>
+      <td><span property="chem:smiles">C(C)C(CC)(CC)CC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:CLZCPQKGOAXOJT-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2-Dimethyl-3-ethylpentane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">133.8</span></td>
+      <td><span property="chem:smiles">CC(C)(C(CC)CC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:MMASVVOQIKCFJZ-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,3-Dimethyl-3-ethylpentan</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">142</span></td>
+      <td><span property="chem:smiles">CC(C)C(CC)(CC)C</span></td>
+    </tr>
   </table>
       
   <!-- meta data -->
