--- a/classic1.html
+++ b/classic1.html
@@ -339,9 +339,69 @@
       <td><span property="chem:smiles">CC(C)(C(CC)CC)C</span></td>
     </tr>
     <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:MMASVVOQIKCFJZ-UHFFFAOYSA-N">
-      <td><span property="dc:title">2,3-Dimethyl-3-ethylpentan</span></td>
+      <td><span property="dc:title">2,3-Dimethyl-3-ethylpentane</span></td>
       <td><span property="cc:tobs" datatype="xs:float">142</span></td>
       <td><span property="chem:smiles">CC(C)C(CC)(CC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:VLHAGZNBWKUMRW-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,4-Dimethyl-3-ethylpentane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">136.7</span></td>
+      <td><span property="chem:smiles">CC(C)C(C(C)C)CC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:QUKOJKFJIHSBKV-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,3,3-Tetramethylpentane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">140.2</span></td>
+      <td><span property="chem:smiles">CC(C)(C(CC)(C)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:VZFMYOCAEQDWDY-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,3,4-Tetramethylpentane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">133.0</span></td>
+      <td><span property="chem:smiles">CC(C)(C(C(C)C)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:GUMULFRCHLJNDY-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,2,4,4-Tetramethylpentane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">122.3</span></td>
+      <td><span property="chem:smiles">CC(C)(CC(C)(C)C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:JLCYYQOQSAMWTA-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,3,3,4-Tetramethylpentane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">141.5</span></td>
+      <td><span property="chem:smiles">CC(C)C(C(C)C)(C)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:DIOQZVSQGTUSAI-UHFFFAOYSA-N">
+      <td><span property="dc:title">n-Decane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">174.0</span></td>
+      <td><span property="chem:smiles">CCCCCCCCCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:SGVYKUFIHHTIFL-UHFFFAOYSA-N">
+      <td><span property="dc:title">2-Methylnonane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">166.8</span></td>
+      <td><span property="chem:smiles">CC(C)CCCCCCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:PLZDDPSCZHRBOY-UHFFFAOYSA-N">
+      <td><span property="dc:title">3-Methylnonane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">167.8</span></td>
+      <td><span property="chem:smiles">CC(CC)CCCCCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:IALRSQMWHFKJJA-UHFFFAOYSA-N">
+      <td><span property="dc:title">4-Methylnonane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">165.7</span></td>
+      <td><span property="chem:smiles">CC(CCC)CCCCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:TYSIILFJZXHVPU-UHFFFAOYSA-N">
+      <td><span property="dc:title">5-Methylnonane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">165.1</span></td>
+      <td><span property="chem:smiles">CC(CCCC)CCCC</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:IXAVTTRPEXFVSX-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,4-Dimethyloctane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">153.2</span></td>
+      <td><span property="chem:smiles">CC(C)CC(CCCC)C</span></td>
+    </tr>
+    <tr typeof="cc:molecule" about="http://bioregistry.org/inchikey:HOAAQUNESXYFDT-UHFFFAOYSA-N">
+      <td><span property="dc:title">2,5-Dimethyloctane</span></td>
+      <td><span property="cc:tobs" datatype="xs:float">159</span></td>
+      <td><span property="chem:smiles">CC(C)CCC(CCC)C</span></td>
     </tr>
   </table>
       
